@@ -26,7 +26,7 @@ class CMysqlColumnSchema extends CDbColumnSchema
 	{
 		if(strpos($dbType,'bigint')!==false || strpos($dbType,'float')!==false || strpos($dbType,'double')!==false)
 			$this->type='double';
-		else if(strpos($dbType,'bool')!==false || $dbType==='tinyint(1)')
+		else if(strpos($dbType,'bool')!==false)
 			$this->type='boolean';
 		else if(strpos($dbType,'int')!==false || strpos($dbType,'bit')!==false)
 			$this->type='integer';
