@@ -105,12 +105,12 @@ EOD;
 		if(is_string($table->primaryKey))
 		{
 			$sql.=" RETURNING ".$table->primaryKey." INTO :RETURN_ID";
-			$command=$this->_connection->createCommand($sql);
+			$command=$this->getDbConnection()->createCommand($sql);
 			$command->bindParam(':RETURN_ID', $this->returnID, PDO::PARAM_INT, 12);
 			$table->sequenceName='RETURN_ID';
 		}
 		else
-			$command=$this->_connection->createCommand($sql);
+			$command=$this->getDbConnection()->createCommand($sql);
 
 		foreach($values as $name=>$value)
 			$command->bindValue($name,$value);
