@@ -108,12 +108,12 @@ class CMysqlTest extends CTestCase
 		(
 			'name'=>array('int_col', 'int_col2', 'char_col', 'char_col2', 'char_col3', 'float_col', 'float_col2', 'blob_col', 'numeric_col', 'time', 'bool_col', 'bool_col2'),
 			'rawName'=>array('`int_col`', '`int_col2`', '`char_col`', '`char_col2`', '`char_col3`', '`float_col`', '`float_col2`', '`blob_col`', '`numeric_col`', '`time`', '`bool_col`', '`bool_col2`'),
-			'defaultValue'=>array(null, 1, null, 'something', null, null, 1.23, null, '33.22', '2002-01-01 00:00:00', null, true),
+			'defaultValue'=>array(null, 1, null, 'something', null, null, 1.23, null, '33.22', '2002-01-01 00:00:00', null, 1),
 			'size'=>array(11, 11, 100, 100, null, 4, null, null, 5, null, 1, 1),
 			'precision'=>array(11, 11, 100, 100, null, 4, null, null, 5, null, 1, 1),
 			'scale'=>array(null, null, null, null, null, 3, null, null, 2, null, null, null),
 			'dbType'=>array('int(11)','int(11)','char(100)','varchar(100)','text','double(4,3)','double','blob','decimal(5,2)','timestamp','tinyint(1)','tinyint(1)'),
-			'type'=>array('integer','integer','string','string','string','double','double','string','string','string','boolean','boolean'),
+			'type'=>array('integer','integer','string','string','string','double','double','string','string','string','integer','integer'),
 			'isPrimaryKey'=>array(false,false,false,false,false,false,false,false,false,false,false,false),
 			'isForeignKey'=>array(false,false,false,false,false,false,false,false,false,false,false,false),
 		);
