@@ -10,6 +10,9 @@ Version 1.1a to be released
 
 Version 1.0.7 to be released
 ----------------------------
+- Bug: COciCommandBuilder is referencing undefined variable (Qiang)
+- Bug: yiic webapp may generate incorrect path to yii.php (Qiang)
+- New: Rolled back the change about treating tinyint(1) in MySQL as boolean (Qiang)
 
 Version 1.0.6 June 7, 2009
 --------------------------
